# picsellia-cv-base-docker

./: README.md  pyproject.toml
base/: run.sh
base/cpu/: Dockerfile
base/cuda/: Dockerfile  Dockerfile.12-9-24
base/logs/: monitor.py  tailer.py
base/logs/utils/: picsellia.py
scripts/: build_and_push.sh
