[project]
name = "picsellia-cv-base-docker"
version = "0.1.0"
description = ""
authors = [
    {name = "SoniaGrh",email = "sonia.garrouch@hotmail.fr"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "picsellia (>=6.20.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.poetry]
package-mode = false
